--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -37,6 +37,14 @@
                     android:layout_marginTop="50dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"/>
+                <Button
+                    android:onClick="EditUser"
+                    android:background="@drawable/ic_baseline_edit_24"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -45,11 +53,13 @@
                     <TextView
                         android:id="@+id/NameTextView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        style="@style/NameText"/>
                     <TextView
                         android:id="@+id/StateTextView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        style="@style/StateText"/>
                     <TextView
                         android:id="@+id/AgeTextView"
                         android:layout_width="match_parent"
