--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -21,17 +21,36 @@
         android:orientation="vertical">
 
         <EditText
+            android:id="@+id/AgeTextView"
+            android:maxLines="1"
+            android:inputType="number"
+            android:hint="@string/ageHint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+        <EditText
             android:id="@+id/NameTextView"
             android:maxLines="1"
             android:inputType="text"
             android:hint="@string/nameHint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/StateTextView"
-            android:hint="@string/stateHint"
+
+        <FrameLayout
+            android:background="@drawable/back_smoke_round"
+            android:layout_margin="15dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/StateTextView"
+                android:background="@android:color/transparent"
+                android:layout_margin="15dp"
+                android:inputType="textMultiLine"
+                android:hint="@string/stateHint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </FrameLayout>
 
     </LinearLayout>
     <Button
